--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>admin</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>jmu.lsk</groupId>
+            <artifactId>framework</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
