--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 7777
 spring:
+  redis:
+    host: 192.168.200.130
+    password: 123456
+    port: 6379
   datasource:
     url: jdbc:mysql://localhost:3306/blog?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
