--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -2,8 +2,9 @@ server:
   port: 7777
 spring:
   redis:
-    host: 127.0.0.1
+    host: 192.168.200.130
     port: 6379
+    password: 123456
   datasource:
     url: jdbc:mysql://localhost:3306/blog?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
@@ -15,7 +16,6 @@ spring:
       max-request-size: 5MB
 mybatis-plus:
   configuration:
-    # 鏃ュ織
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
@@ -23,7 +23,9 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
-oss:
-  accessKey: daddasd
-  secretKey: weqeqwe
-  bucket: sg-blog
+minio:
+  accessKey: RMKMZIcjwrH7iijiLVkz
+  secretKey: vHlQkEmhR3RCkHN35aI2NkfuloG9LQb7PxC6HxrA
+  bucket: blog
+  endpoint: http://192.168.200.130:9000
+  readPath: http://192.168.200.130:9000
