--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,19 @@
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>2.9.2</version>
 			</dependency>
+			<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.9</version>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup.okhttp3</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>4.11.0</version>
+			</dependency>
 		</dependencies>
+
+
 	</dependencyManagement>
 
 	<build>
@@ -70,5 +82,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
