后台登录，发布文章

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 7777
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   redis:
     host: 192.168.200.130
     port: 6379
