--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -126,6 +126,21 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <!--检测spring的web请求信息，生成检测结果（json格式） -->
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <!--根据springfox-swagger2生成的数据，生成可视化的友好页面 -->
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+
     </dependencies>
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
