--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 				<artifactId>okhttp</artifactId>
 				<version>4.11.0</version>
 			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>3.0.0</version>
+			</dependency>
+
 		</dependencies>
 
 
