--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -106,6 +106,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.jeffreyning</groupId>
+            <artifactId>mybatisplus-plus</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
             <exclusions>
