--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 				<artifactId>springfox-boot-starter</artifactId>
 				<version>3.0.0</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.jeffreyning</groupId>
+				<artifactId>mybatisplus-plus</artifactId>
+				<version>1.7.4-RELEASE</version>
+			</dependency>
 
 		</dependencies>
 
